[package]
name = "lexikon"
version = "0.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
khi = { version = "0.16.1", features = ["tex"] }
zeroarg = "0.1.0"
include_dir = "0.7.4"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
typed-arena = "2.0.2"
